Update meta tags for improved SEO optimization

--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,25 @@
     <meta name="keywords" content="Neurologist,Neurologist in Nagercoil,Brain Doctor,Stroke,Fits,Epilepsy,Meningitis,Migraine">
     <meta name="description" content="Dr Arun Gokul Pon, top neurologist from Nagercoil, with his experience from top neurology institutions like NIMHANS and MGM Healthcare is back to his hometown with the vision to bring the world class neuro care to the suburbs and villages" />
     
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org/",
+        "@type": "Person",
+        "name": "Dr. Arun Gokul Pon",
+        "url": "https://agpneuroclinic.com/about.html",
+        "image": "https://agpneuroclinic.com/img/neurologist.png",
+        "sameAs": [
+            "https://www.instagram.com/agpneuroclinic/",
+            "https://arungokulpon.wordpress.com/"
+        ],
+        "jobTitle": "Senior Consultant Neurologist",
+        "worksFor": {
+            "@type": "Organization",
+            "name": "AGP Neuro Clinic"
+        }  
+    }
+    </script>
+
     <!-- Open Graph / Facebook -->
     <meta property="og:title" content="Best Neurologist in Nagercoil | Dr. Arun Gokul Pon">
     <meta property="og:site_name" content="AGP Neuro Clinic">
