--- a/handout/back-strengthening.html
+++ b/handout/back-strengthening.html
@@ -14,6 +14,35 @@
     <meta name="description" content="Activities designed to improve the muscles supporting the spine and promote better posture and stability." />
     <base href="/">
 
+    <script type="application/ld+json">
+    {
+    "@context": "https://schema.org",
+    "@type": "Article",
+    "mainEntityOfPage": {
+        "@type": "WebPage",
+        "@id": "https://agpneuroclinic.com/handout/back-strengthening.html"
+    },
+    "headline": "Exercises for Back Strengthening - Dr. Arun Gokul Pon",
+    "description": "Activities designed to improve the muscles supporting the spine and promote better posture and stability.",
+    "image": "https://agpneuroclinic.com/img/logo.png",  
+    "author": {
+        "@type": "Person",
+        "name": "Dr. Arun Gokul Pon",
+        "url": "https://agpneuroclinic.com/about.html"
+    },  
+    "publisher": {
+        "@type": "Organization",
+        "name": "AGP Neuro Clinic",
+        "logo": {
+        "@type": "ImageObject",
+        "url": "https://agpneuroclinic.com"
+        }
+    },
+    "datePublished": "2024-07-01",
+    "dateModified": "2024-07-01"
+    }
+    </script>
+
     <!-- Open Graph / Facebook -->
     <meta property="og:title" content="Exercises for Back Strengthening | Dr. Arun Gokul Pon">
     <meta property="og:site_name" content="AGP Neuro Clinic">
