--- a/index.html
+++ b/index.html
@@ -20,6 +20,45 @@
     <meta name="keywords" content="Neurologist,Neurologist in Nagercoil,Brain Doctor,Stroke,Fits,Epilepsy,Meningitis,Migraine">
     <meta name="description" content="Dr Arun Gokul Pon, top neurologist from Nagercoil, with his experience from top neurology institutions like NIMHANS and MGM Healthcare is back to his hometown with the vision to bring the world class neuro care to the suburbs and villages" />
     
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "MedicalClinic",
+        "name": "Dr. Arun Gokul | AGP Neuro Clinic",
+        "image": "https://agpneuroclinic.com/img/logo.png",
+        "@id": "https://agpneuroclinic.com/",
+        "url": "https://agpneuroclinic.com/",
+        "telephone": "+91 83000 44644",
+        "priceRange": "₹200-₹400",
+        "address": {
+            "@type": "PostalAddress",
+            "streetAddress": "18/25 A-1, Rajakamanagalam Road, Karavilai",
+            "addressLocality": "Nagercoil",
+            "postalCode": "629201",
+            "addressRegion": "Tamil Nadu",
+            "addressCountry": "IN"
+        },
+        "geo": {
+            "@type": "GeoCoordinates",
+            "latitude": 8.143396943021571,
+            "longitude": 77.3829199555653
+        },
+        "openingHoursSpecification": {
+        "@type": "OpeningHoursSpecification",
+        "dayOfWeek": [
+            "Monday",
+            "Tuesday",
+            "Wednesday",
+            "Thursday",
+            "Friday"
+        ],
+        "opens": "16:00",
+        "closes": "19:00"
+        },
+        "sameAs": "https://www.instagram.com/agpneuroclinic/" 
+    }
+    </script>
+
     <!-- Open Graph / Facebook -->
     <meta property="og:title" content="Best Neurologist in Nagercoil | Dr. Arun Gokul Pon">
     <meta property="og:site_name" content="AGP Neuro Clinic">
