--- a/knowyourdiseases/GBS.html
+++ b/knowyourdiseases/GBS.html
@@ -14,6 +14,35 @@
     <meta name="description" content="Guillain-Barré சிண்ட்ரோம் அல்லது 'GBS' என்பது லேசான அல்லது கடுமையான தசை பலவீனத்தை ஏற்படுத்தும் ஒரு நிலை. பல்வேறு வகையான ஜிபிஎஸ் உள்ளன. மிகவும் பொதுவான வகை 'Acute Inflammatory Demyelinating Polyneuropathy' அல்லது 'AIDP' என்று அழைக்கப்படுகிறது. குழந்தைகள் மற்றும் பெரியவர்கள் இருவரும் ஜிபிஎஸ் பெறலாம்." />
     <base href="/">
 
+    <script type="application/ld+json">
+    {
+    "@context": "https://schema.org",
+    "@type": "Article",
+    "mainEntityOfPage": {
+        "@type": "WebPage",
+        "@id": "https://agpneuroclinic.com/knowyourdiseases/GBS.html"
+    },
+    "headline": "குய்லின்-பாரே நோய் (Guillain barre syndrome/ GBS) - Dr. Arun Gokul Pon",
+    "description": "Guillain-Barré சிண்ட்ரோம் அல்லது 'GBS' என்பது லேசான அல்லது கடுமையான தசை பலவீனத்தை ஏற்படுத்தும் ஒரு நிலை. பல்வேறு வகையான ஜிபிஎஸ் உள்ளன. மிகவும் பொதுவான வகை 'Acute Inflammatory Demyelinating Polyneuropathy' அல்லது 'AIDP' என்று அழைக்கப்படுகிறது. குழந்தைகள் மற்றும் பெரியவர்கள் இருவரும் ஜிபிஎஸ் பெறலாம்.",
+    "image": "https://agpneuroclinic.com/img/logo.png",  
+    "author": {
+        "@type": "Person",
+        "name": "Dr. Arun Gokul Pon",
+        "url": "https://agpneuroclinic.com/about.html"
+    },  
+    "publisher": {
+        "@type": "Organization",
+        "name": "AGP Neuro Clinic",
+        "logo": {
+        "@type": "ImageObject",
+        "url": "https://agpneuroclinic.com"
+        }
+    },
+    "datePublished": "2024-07-01",
+    "dateModified": "2024-07-01"
+    }
+    </script>
+
     <!-- Open Graph / Facebook -->
     <meta property="og:title" content="குய்லின்-பாரே நோய் (Guillain barre syndrome/ GBS) | Dr. Arun Gokul Pon">
     <meta property="og:site_name" content="AGP Neuro Clinic">
