--- a/knowyourdiseases/meningitis.html
+++ b/knowyourdiseases/meningitis.html
@@ -14,6 +14,35 @@
     <meta name="description" content="மூளை மற்றும் மூளை தண்டு வடத்தைச் சுற்றியுள்ள திசுக்கள் ('மெனிஞ்சஸ் (Meninges)' என்று அழைக்கப்படும்) தொற்று ஏற்படும் போது மூளைக்காய்ச்சல் ஏற்படுகிறது. உடலின் மற்றொரு பகுதியில் ஏற்பட்ட தொற்று கிருமிகள் இரத்தத்தின் வழியாக மூளை மற்றும் முதுகுத் தண்டுவடத்தைச் சுற்றியுள்ள திசுக்களுக்குச் செல்ல முடியும்." />
     <base href="/">
 
+    <script type="application/ld+json">
+    {
+    "@context": "https://schema.org",
+    "@type": "Article",
+    "mainEntityOfPage": {
+        "@type": "WebPage",
+        "@id": "https://agpneuroclinic.com/knowyourdiseases/meningitis.html"
+    },
+    "headline": "மூளைக்காய்ச்சல் (Meningitis) - Dr. Arun Gokul Pon",
+    "description": "மூளை மற்றும் மூளை தண்டு வடத்தைச் சுற்றியுள்ள திசுக்கள் ('மெனிஞ்சஸ் (Meninges)' என்று அழைக்கப்படும்) தொற்று ஏற்படும் போது மூளைக்காய்ச்சல் ஏற்படுகிறது. உடலின் மற்றொரு பகுதியில் ஏற்பட்ட தொற்று கிருமிகள் இரத்தத்தின் வழியாக மூளை மற்றும் முதுகுத் தண்டுவடத்தைச் சுற்றியுள்ள திசுக்களுக்குச் செல்ல முடியும்.",
+    "image": "https://agpneuroclinic.com/img/knowyourdiseases/meningitis.png",  
+    "author": {
+        "@type": "Person",
+        "name": "Dr. Arun Gokul Pon",
+        "url": "https://agpneuroclinic.com/about.html"
+    },  
+    "publisher": {
+        "@type": "Organization",
+        "name": "AGP Neuro Clinic",
+        "logo": {
+        "@type": "ImageObject",
+        "url": "https://agpneuroclinic.com"
+        }
+    },
+    "datePublished": "2024-07-01",
+    "dateModified": "2024-07-01"
+    }
+    </script>
+
     <!-- Open Graph / Facebook -->
     <meta property="og:title" content="மூளைக்காய்ச்சல் (Meningitis) | Dr. Arun Gokul Pon">
     <meta property="og:site_name" content="AGP Neuro Clinic">
