--- a/knowyourdiseases/migraine.html
+++ b/knowyourdiseases/migraine.html
@@ -14,6 +14,35 @@
     <meta name="description" content="ஒற்றைத் தலைவலி என்பது மற்ற அறிகுறிகளையும் உள்ளடக்கிய ஒரு வகையான தலைவலி. ஒற்றைத் தலைவலி பெரியவர்கள் மற்றும் குழந்தைகள் இருவரையும் பாதிக்கும். அவை ஆண்களை விட பெண்களில் அதிகம் காணப்படுகின்றன. ஒற்றைத் தலைவலி பெரும்பாலும் லேசாகத் தொடங்கி பின்னர் மோசமாகிவிடும்." />
     <base href="/">
 
+    <script type="application/ld+json">
+    {
+    "@context": "https://schema.org",
+    "@type": "Article",
+    "mainEntityOfPage": {
+        "@type": "WebPage",
+        "@id": "https://agpneuroclinic.com/knowyourdiseases/migraine.html"
+    },
+    "headline": "ஒற்றைத் தலைவலி (Migraine) - Dr. Arun Gokul Pon",
+    "description": "ஒற்றைத் தலைவலி என்பது மற்ற அறிகுறிகளையும் உள்ளடக்கிய ஒரு வகையான தலைவலி. ஒற்றைத் தலைவலி பெரியவர்கள் மற்றும் குழந்தைகள் இருவரையும் பாதிக்கும். அவை ஆண்களை விட பெண்களில் அதிகம் காணப்படுகின்றன. ஒற்றைத் தலைவலி பெரும்பாலும் லேசாகத் தொடங்கி பின்னர் மோசமாகிவிடும்.",
+    "image": "https://agpneuroclinic.com/img/knowyourdiseases/migraine.png",  
+    "author": {
+        "@type": "Person",
+        "name": "Dr. Arun Gokul Pon",
+        "url": "https://agpneuroclinic.com/about.html"
+    },  
+    "publisher": {
+        "@type": "Organization",
+        "name": "AGP Neuro Clinic",
+        "logo": {
+        "@type": "ImageObject",
+        "url": "https://agpneuroclinic.com"
+        }
+    },
+    "datePublished": "2024-07-01",
+    "dateModified": "2024-07-01"
+    }
+    </script>
+
     <!-- Open Graph / Facebook -->
     <meta property="og:title" content="ஒற்றைத் தலைவலி (Migraine) | Dr. Arun Gokul Pon">
     <meta property="og:site_name" content="AGP Neuro Clinic">
