--- a/knowyourdiseases/neuropathic.html
+++ b/knowyourdiseases/neuropathic.html
@@ -14,6 +14,35 @@
     <meta name="description" content="நரம்பியல் வலி என்பது நரம்பு பாதிப்பு அல்லது நரம்பு மண்டலத்தில் ஏற்படும் பிரச்சனையால் ஏற்படும் ஒரு வகை வலி." />
     <base href="/">
 
+    <script type="application/ld+json">
+    {
+    "@context": "https://schema.org",
+    "@type": "Article",
+    "mainEntityOfPage": {
+        "@type": "WebPage",
+        "@id": "https://agpneuroclinic.com/knowyourdiseases/neuropathic.html"
+    },
+    "headline": "நரம்பியல் வலி (Neuropathic pain) - Dr. Arun Gokul Pon",
+    "description": "நரம்பியல் வலி என்பது நரம்பு பாதிப்பு அல்லது நரம்பு மண்டலத்தில் ஏற்படும் பிரச்சனையால் ஏற்படும் ஒரு வகை வலி.",
+    "image": "https://agpneuroclinic.com/img/knowyourdiseases/neuropathy.png",  
+    "author": {
+        "@type": "Person",
+        "name": "Dr. Arun Gokul Pon",
+        "url": "https://agpneuroclinic.com/about.html"
+    },  
+    "publisher": {
+        "@type": "Organization",
+        "name": "AGP Neuro Clinic",
+        "logo": {
+        "@type": "ImageObject",
+        "url": "https://agpneuroclinic.com"
+        }
+    },
+    "datePublished": "2024-07-01",
+    "dateModified": "2024-07-01"
+    }
+    </script>
+
     <!-- Open Graph / Facebook -->
     <meta property="og:title" content="நரம்பியல் வலி (Neuropathic pain) | Dr. Arun Gokul Pon">
     <meta property="og:site_name" content="AGP Neuro Clinic">
