--- a/knowyourdiseases/parkinsons.html
+++ b/knowyourdiseases/parkinsons.html
@@ -14,6 +14,35 @@
     <meta name="description" content="நடுக்குவாதம் அல்லது பார்கின்சன் நோய் (Parkinson's disease) அல்லது பீ.டி என்பது மைய நரம்பு மண்டலத்தைச் சிதைக்கின்ற ஒரு நோய் ஆகும், பொதுவாக இந்த நோயால் பாதிக்கப்பட்டவர்களின் இயக்கத்திறன்கள் (Movements), பேச்சு மற்றும் மற்ற செயல்பாடுகள் சீராக இயங்கமாட்டாது." />
     <base href="/">
 
+    <script type="application/ld+json">
+    {
+    "@context": "https://schema.org",
+    "@type": "Article",
+    "mainEntityOfPage": {
+        "@type": "WebPage",
+        "@id": "https://agpneuroclinic.com/knowyourdiseases/parkinsons.html"
+    },
+    "headline": "பார்கின்சன் நோய் (Parkinson's disease) - Dr. Arun Gokul Pon",
+    "description": "நடுக்குவாதம் அல்லது பார்கின்சன் நோய் (Parkinson's disease) அல்லது பீ.டி என்பது மைய நரம்பு மண்டலத்தைச் சிதைக்கின்ற ஒரு நோய் ஆகும், பொதுவாக இந்த நோயால் பாதிக்கப்பட்டவர்களின் இயக்கத்திறன்கள் (Movements), பேச்சு மற்றும் மற்ற செயல்பாடுகள் சீராக இயங்கமாட்டாது.",
+    "image": "https://agpneuroclinic.com/img/knowyourdiseases/parkinsons.png",  
+    "author": {
+        "@type": "Person",
+        "name": "Dr. Arun Gokul Pon",
+        "url": "https://agpneuroclinic.com/about.html"
+    },  
+    "publisher": {
+        "@type": "Organization",
+        "name": "AGP Neuro Clinic",
+        "logo": {
+        "@type": "ImageObject",
+        "url": "https://agpneuroclinic.com"
+        }
+    },
+    "datePublished": "2024-07-01",
+    "dateModified": "2024-07-01"
+    }
+    </script>
+
     <!-- Open Graph / Facebook -->
     <meta property="og:title" content="பார்கின்சன் நோய் (Parkinson's disease) | Dr. Arun Gokul Pon">
     <meta property="og:site_name" content="AGP Neuro Clinic">
