--- a/services.html
+++ b/services.html
@@ -13,6 +13,94 @@
     <meta name="keywords" content="Neurologist,Neurologist in Nagercoil,Brain Doctor,Stroke,Fits,Epilepsy,Meningitis,Migraine">
     <meta name="description" content="Dr Arun Gokul Pon, top neurologist from Nagercoil, with his experience from top neurology institutions like NIMHANS and MGM Healthcare is back to his hometown with the vision to bring the world class neuro care to the suburbs and villages" />
     
+    <script type="application/ld+json">
+    {
+    "@context": "http://schema.org",
+    "@type": "Service",
+    "serviceType": "Neurology Consulting | General Medical Checkup",
+    "provider": {
+        "@type": "Organization",
+        "name": "AGP Neuro Clinic",
+        "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "18/25 A-1, Rajakamanagalam Road, Karavilai",
+        "addressLocality": "Nagercoil",
+        "postalCode": "629201",
+        "addressRegion": "Tamil Nadu",
+        "addressCountry": "IN"
+        },
+        "contactPoint": {
+        "@type": "ContactPoint",
+        "telephone": "+91 83000 44644",
+        "contactType": "customer service"
+        }
+    },
+    "areaServed": {
+        "@type": "Country",
+        "name": "IN"
+    },
+    "availableChannel": {
+        "@type": "ServiceChannel",
+        "serviceUrl": "https://agpneuroclinic.com/services.html",
+        "servicePhone": {
+        "@type": "ContactPoint",
+        "telephone": "+91 83000 44644",
+        "contactType": "customer service"
+        },
+        "serviceSmsNumber": {
+        "@type": "ContactPoint",
+        "telephone": "+91 83000 44644",
+        "contactType": "customer service"
+        },
+        "servicePostalAddress": {
+        "@type": "PostalAddress",
+        "streetAddress": "18/25 A-1, Rajakamanagalam Road, Karavilai",
+        "addressLocality": "Nagercoil",
+        "postalCode": "629201",
+        "addressRegion": "Tamil Nadu",
+        "addressCountry": "IN"
+        }
+    },
+    "brand": {
+        "@type": "Brand",
+        "name": "AGP Neuro Clinic"
+    },
+    "category": "MedicalClinic",
+    "hoursAvailable": {
+        "@type": "OpeningHoursSpecification",
+        "dayOfWeek": [
+        "Monday",
+        "Tuesday",
+        "Wednesday",
+        "Thursday",
+        "Friday"
+        ],
+        "opens": "16:00",
+        "closes": "19:00"
+    },
+    "logo": "https://agpneuroclinic.com/img/logo.png",
+    "review": {
+        "@type": "Review",
+        "author": {
+        "@type": "Person",
+        "name": "Vijay Nirmal"
+        },
+        "reviewBody": "Great service, highly recommended. Very open hospital, they will give all the reports in our hands when we are leaving unlike most hospital where they will keep the report with themselves, this shows confidence in the quality of the service they are providing.",
+        "reviewRating": {
+        "@type": "Rating",
+        "ratingValue": "5",
+        "bestRating": "5",
+        "worstRating": "1"
+        }
+    },
+    "aggregateRating": {
+        "@type": "AggregateRating",
+        "ratingValue": "5",
+        "reviewCount": "5"
+    }
+    }
+    </script>
+
     <!-- Open Graph / Facebook -->
     <meta property="og:title" content="Best Neurologist in Nagercoil | Dr. Arun Gokul Pon">
     <meta property="og:site_name" content="AGP Neuro Clinic">
