--- a/handout/headache-diary.html
+++ b/handout/headache-diary.html
@@ -14,6 +14,35 @@
     <meta name="description" content="A log where one records details about headaches, including triggers, intensity, duration, and any medications taken, to identify patterns and manage symptoms." />
     <base href="/">
 
+    <script type="application/ld+json">
+    {
+    "@context": "https://schema.org",
+    "@type": "Article",
+    "mainEntityOfPage": {
+        "@type": "WebPage",
+        "@id": "https://agpneuroclinic.com/handout/headache-diary.html"
+    },
+    "headline": "Headache Diary - Dr. Arun Gokul Pon",
+    "description": "A log where one records details about headaches, including triggers, intensity, duration, and any medications taken, to identify patterns and manage symptoms.",
+    "image": "https://agpneuroclinic.com/img/logo.png",  
+    "author": {
+        "@type": "Person",
+        "name": "Dr. Arun Gokul Pon",
+        "url": "https://agpneuroclinic.com/about.html"
+    },  
+    "publisher": {
+        "@type": "Organization",
+        "name": "AGP Neuro Clinic",
+        "logo": {
+        "@type": "ImageObject",
+        "url": "https://agpneuroclinic.com"
+        }
+    },
+    "datePublished": "2024-07-01",
+    "dateModified": "2024-07-01"
+    }
+    </script>
+
     <!-- Open Graph / Facebook -->
     <meta property="og:title" content="Headache Diary | Dr. Arun Gokul Pon">
     <meta property="og:site_name" content="AGP Neuro Clinic">
