--- a/handout/shoulder-strengthening.html
+++ b/handout/shoulder-strengthening.html
@@ -14,6 +14,35 @@
     <meta name="description" content="Techniques aimed at enhancing the muscles around the shoulder joint to increase stability and mobility." />
     <base href="/">
 
+    <script type="application/ld+json">
+    {
+    "@context": "https://schema.org",
+    "@type": "Article",
+    "mainEntityOfPage": {
+        "@type": "WebPage",
+        "@id": "https://agpneuroclinic.com/handout/shoulder-strengthening.html"
+    },
+    "headline": "Exercises for Shoulder Strengthening - Dr. Arun Gokul Pon",
+    "description": "Techniques aimed at enhancing the muscles around the shoulder joint to increase stability and mobility.",
+    "image": "https://agpneuroclinic.com/img/logo.png",  
+    "author": {
+        "@type": "Person",
+        "name": "Dr. Arun Gokul Pon",
+        "url": "https://agpneuroclinic.com/about.html"
+    },  
+    "publisher": {
+        "@type": "Organization",
+        "name": "AGP Neuro Clinic",
+        "logo": {
+        "@type": "ImageObject",
+        "url": "https://agpneuroclinic.com"
+        }
+    },
+    "datePublished": "2024-07-01",
+    "dateModified": "2024-07-01"
+    }
+    </script>
+
     <!-- Open Graph / Facebook -->
     <meta property="og:title" content="Exercises for Shoulder Strengthening | Dr. Arun Gokul Pon">
     <meta property="og:site_name" content="AGP Neuro Clinic">
