--- a/knowyourdiseases/neuropathy.html
+++ b/knowyourdiseases/neuropathy.html
@@ -14,6 +14,35 @@
     <meta name="description" content="ஆம். உங்கள் இரத்த சர்க்கரை நீண்ட காலமாக அதிகமாக இருந்தால் நரம்பு சேதத்தை ஏற்படுத்தும். சர்க்கரை நோய் உள்ளவர்கள் பல்வேறு வகையான நரம்பு பாதிப்புகளை சந்திக்க நேரிடும்." />
     <base href="/">
 
+    <script type="application/ld+json">
+    {
+    "@context": "https://schema.org",
+    "@type": "Article",
+    "mainEntityOfPage": {
+        "@type": "WebPage",
+        "@id": "https://agpneuroclinic.com/knowyourdiseases/neuropathy.html"
+    },
+    "headline": "சர்க்கரை நோயினால் நரம்பு தளர்ச்சி (Diabetic Neuropathy) - Dr. Arun Gokul Pon",
+    "description": "ஆம். உங்கள் இரத்த சர்க்கரை நீண்ட காலமாக அதிகமாக இருந்தால் நரம்பு சேதத்தை ஏற்படுத்தும். சர்க்கரை நோய் உள்ளவர்கள் பல்வேறு வகையான நரம்பு பாதிப்புகளை சந்திக்க நேரிடும்.",
+    "image": "https://agpneuroclinic.com/img/knowyourdiseases/neuropathy.png",  
+    "author": {
+        "@type": "Person",
+        "name": "Dr. Arun Gokul Pon",
+        "url": "https://agpneuroclinic.com/about.html"
+    },  
+    "publisher": {
+        "@type": "Organization",
+        "name": "AGP Neuro Clinic",
+        "logo": {
+        "@type": "ImageObject",
+        "url": "https://agpneuroclinic.com"
+        }
+    },
+    "datePublished": "2024-07-01",
+    "dateModified": "2024-07-01"
+    }
+    </script>
+
     <!-- Open Graph / Facebook -->
     <meta property="og:title" content="சர்க்கரை நோயினால் நரம்பு தளர்ச்சி (Diabetic Neuropathy) | Dr. Arun Gokul Pon">
     <meta property="og:site_name" content="AGP Neuro Clinic">
