--- a/knowyourdiseases/seizures.html
+++ b/knowyourdiseases/seizures.html
@@ -14,6 +14,35 @@
     <meta name="description" content="மூளையில் ஏற்படும் அசாதாரண மின் செயல்பாடுகளால் வலிப்பு ஏற்படுகிறது. கால்-கை வலிப்பு எந்த வயதிலும் தொடங்கலாம்." />
     <base href="/">
 
+    <script type="application/ld+json">
+    {
+    "@context": "https://schema.org",
+    "@type": "Article",
+    "mainEntityOfPage": {
+        "@type": "WebPage",
+        "@id": "https://agpneuroclinic.com/knowyourdiseases/seizures.html"
+    },
+    "headline": "வலிப்பு (Seizures/Epilepsy) - Dr. Arun Gokul Pon",
+    "description": "மூளையில் ஏற்படும் அசாதாரண மின் செயல்பாடுகளால் வலிப்பு ஏற்படுகிறது. கால்-கை வலிப்பு எந்த வயதிலும் தொடங்கலாம்.",
+    "image": "https://agpneuroclinic.com/img/knowyourdiseases/seizures.png",  
+    "author": {
+        "@type": "Person",
+        "name": "Dr. Arun Gokul Pon",
+        "url": "https://agpneuroclinic.com/about.html"
+    },  
+    "publisher": {
+        "@type": "Organization",
+        "name": "AGP Neuro Clinic",
+        "logo": {
+        "@type": "ImageObject",
+        "url": "https://agpneuroclinic.com"
+        }
+    },
+    "datePublished": "2024-07-01",
+    "dateModified": "2024-07-01"
+    }
+    </script>
+
     <!-- Open Graph / Facebook -->
     <meta property="og:title" content="வலிப்பு (Seizures/Epilepsy) | Dr. Arun Gokul Pon">
     <meta property="og:site_name" content="AGP Neuro Clinic">
