--- a/knowyourdiseases/stroke.html
+++ b/knowyourdiseases/stroke.html
@@ -14,6 +14,35 @@
     <meta name="description" content="பக்கவாதம் என்பது இரத்த ஓட்டத்தில் ஏற்படும் பிரச்சனையால் மூளையின் ஒரு பகுதி சேதமடைந்தால் மருத்துவர்கள் பயன்படுத்தும் சொல். பக்கவாதம் உள்ளவர்கள் முக்கியமான மூளை செயல்பாடுகளை இழக்க நேரிடும். உதாரணமாக, சிலருக்கு கை, கால் செயலிழக்கும் அல்லது பேச முடியாமல் போகும்." />
     <base href="/">
 
+    <script type="application/ld+json">
+    {
+    "@context": "https://schema.org",
+    "@type": "Article",
+    "mainEntityOfPage": {
+        "@type": "WebPage",
+        "@id": "https://agpneuroclinic.com/knowyourdiseases/stroke.html"
+    },
+    "headline": "பக்கவாதம் (Stroke)",
+    "description": "பக்கவாதம் என்பது இரத்த ஓட்டத்தில் ஏற்படும் பிரச்சனையால் மூளையின் ஒரு பகுதி சேதமடைந்தால் மருத்துவர்கள் பயன்படுத்தும் சொல். பக்கவாதம் உள்ளவர்கள் முக்கியமான மூளை செயல்பாடுகளை இழக்க நேரிடும். உதாரணமாக, சிலருக்கு கை, கால் செயலிழக்கும் அல்லது பேச முடியாமல் போகும்.",
+    "image": "https://agpneuroclinic.com/img/knowyourdiseases/stroke.png",  
+    "author": {
+        "@type": "Person",
+        "name": "Dr. Arun Gokul Pon",
+        "url": "https://agpneuroclinic.com/about.html"
+    },  
+    "publisher": {
+        "@type": "Organization",
+        "name": "AGP Neuro Clinic",
+        "logo": {
+        "@type": "ImageObject",
+        "url": "https://agpneuroclinic.com"
+        }
+    },
+    "datePublished": "2024-07-01",
+    "dateModified": "2024-07-01"
+    }
+    </script>
+
     <!-- Open Graph / Facebook -->
     <meta property="og:title" content="பக்கவாதம் (Stroke) | Dr. Arun Gokul Pon">
     <meta property="og:site_name" content="AGP Neuro Clinic">
