chore: Update styles.css and add new SVG icons

--- a/contact.html
+++ b/contact.html
@@ -4090,6 +4090,51 @@
                                                                                     </div>
                                                                                 </section>
                                                                             </div>
+                                                                            <div
+                                                                                class="tm-sbox tm-sbox-iconalign-before-heading none tm-sbox-bgcolor-transparent tm-bgcolor-transparent tm-sbox-textcolor- tm-textcolor- tm-sbox-isize-sm tm-sbox-isize-sm tm-sbox-istyle-boxed-outline vc_custom_1575635411013 tm-sbox-both-headings tm-0px-heading-margin">
+                                                                                <section class="tm-vc_cta3-container">
+                                                                                    <div
+                                                                                        class="tm-vc_general tm-vc_cta3 tm-vc_cta3-align-left tm-vc_cta3-icon-size-sm tm-vc_cta3-icons-beforeheading tm-vc_cta3-actions-no">
+                                                                                        <div
+                                                                                            class="tm-vc_cta3_content-container">
+                                                                                            <div
+                                                                                                class="tm-vc_cta3-content">
+                                                                                                <div
+                                                                                                    class="tm-vc_cta3-content-header tm-wrap">
+                                                                                                    <div
+                                                                                                        class="tm-vc_cta3-icons tm-wrap-cell">
+                                                                                                        <div
+                                                                                                            class="tm-vc_icon_element tm-vc_icon_element-outer tm-vc_icon_element-align-left  tm-vc_icon_element-have-style">
+                                                                                                            <div
+                                                                                                                class="tm-vc_icon_element-inner  tm-vc_icon_element-have-style-inner tm-vc_icon_element-color-white tm-vc_icon_element-size-sm tm-vc_icon_element-style-boxed-outline tm-vc_icon_element-outline tm-vc_icon_element-background-color-white">
+                                                                                                                <span
+                                                                                                                    class="tm-vc_icon_element-icon fa fa-map-marker"></span>
+                                                                                                            </div>
+                                                                                                        </div>
+                                                                                                    </div>
+                                                                                                    <div
+                                                                                                        class="tm-vc_cta3-headers tm-wrap-cell">
+                                                                                                        <h2 style="font-size:20px;line-height:28px;font-family:'Saira',Arial,Helvetica;font-weight:500;"
+                                                                                                            class="tm-custom-heading ">
+                                                                                                            <a href="https://maps.app.goo.gl/qX3SBN9Uo8bkBRMn8" style="color: white; text-decoration-line: underline;">Get Directions from Google Maps</a>
+                                                                                                        </h2>
+                                                                                                        <h4 style="font-size:14px;line-height:18px;font-family:'Ubuntu',Arial,Helvetica;font-weight:400;"
+                                                                                                            class="tm-custom-heading ">
+                                                                                                            <a href="https://maps.app.goo.gl/qX3SBN9Uo8bkBRMn8" style="color: white; text-decoration-line: none;">Click the link to get directions</a>
+                                                                                                        </h4>
+                                                                                                    </div>
+                                                                                                </div>
+                                                                                            </div>
+                                                                                            <div
+                                                                                                class="tm-cta3-desc-btn-wrapper">
+                                                                                                <div
+                                                                                                    class="tm-cta3-description">
+                                                                                                </div>
+                                                                                            </div>
+                                                                                        </div>
+                                                                                    </div>
+                                                                                </section>
+                                                                            </div>
                                                                         </div>
                                                                     </div>
                                                                 </div>
@@ -4153,29 +4198,11 @@
                                                                                     <div
                                                                                         class="themetechmount-social-links-wrapper">
                                                                                         <ul class="social-icons">
-                                                                                            <!-- <li
-                                                                                                class="tm-social-facebook">
-                                                                                                <a class=" tooltip-top"
-                                                                                                    target="_blank"
-                                                                                                    href="https://www.facebook.com/drjeewankumar/"
-                                                                                                    data-tooltip="Facebook"><i
-                                                                                                        class="tm-brivona-icon-facebook"></i></a>
-                                                                                            </li>
-                                                                                            <li
-                                                                                                class="tm-social-twitter">
-                                                                                                <a class=" tooltip-top"
-                                                                                                    target="_blank"
-                                                                                                    href="https://twitter.com/dr-jeewan-kumar-b15676198"
-                                                                                                    data-tooltip="Twitter"><i
-                                                                                                        class="tm-brivona-icon-twitter"></i></a>
-                                                                                            </li> -->
-                                                                                            <li
-                                                                                                class="tm-social-instagram">
+                                                                                            <li>
                                                                                                 <a class=" tooltip-top"
                                                                                                     target="_blank"
                                                                                                     href="https://www.instagram.com/agpneuroclinic/"
-                                                                                                    data-tooltip="Instagram"><i
-                                                                                                        class="tm-brivona-icon-instagram"></i></a>
+                                                                                                    data-tooltip="Instagram"><img src="/img/icon/instagram.svg" alt="instagram log" style="width: 20px; height: 20px; margin-top: -4px;"></a>
                                                                                             </li>
                                                                                         </ul>
                                                                                     </div>
