--- a/about.html
+++ b/about.html
@@ -3702,7 +3702,7 @@
                                                                                         <p>
                                                                                             <!-- .tm-team-member-appointment-btn-wrapper -->
                                                                                         </p>
-                                                                                        <div class="tm-team-data row">
+                                                                                        <div class="tm-team-data row ul-inline-block">
                                                                                             <div
                                                                                                 class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                                                                                                 <div
@@ -3755,7 +3755,7 @@
                                                                                                     </ul>
                                                                                                 </div>
                                                                                                 <div
-                                                                                                    class="tm-team-details-wrapper tm-team-extra-details-wrapper">
+                                                                                                    class="tm-team-details-wrapper">
                                                                                                     <ul
                                                                                                         class="tm-team-details-list tm-team-extra-details-list">
                                                                                                         <li
@@ -3763,8 +3763,7 @@
                                                                                                             <div
                                                                                                                 class="tm-team-list-title">
                                                                                                                 <i
-                                                                                                                    class="fa fa-map-marker"></i>Address
-                                                                                                                Info :
+                                                                                                                    class="fa fa-map-marker"></i>Address :
                                                                                                             </div>
                                                                                                             <div
                                                                                                                 class="tm-team-list-value">
@@ -3772,6 +3771,31 @@
                                                                                                             </div>
                                                                                                         </li>
                                                                                                     </ul>
+                                                                                                </div>
+                                                                                                <div class="tm-team-extra-details-wrapper" style="margin-bottom: 20px;">
+                                                                                                    <div class="mapouter">
+                                                                                                        <div class="gmap_canvas">
+                                                                                                            <iframe style="width: -webkit-fill-available" height="300" id="gmap_canvas"
+                                                                                                                src="https://maps.google.com/maps?q=AGP%20Neuro%20Clinic&t=&z=13&ie=UTF8&iwloc=&output=embed"
+                                                                                                                frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+                                                                                                            <style>
+                                                                                                                .mapouter {
+                                                                                                                    position: relative;
+                                                                                                                    text-align: right;
+                                                                                                                    height: 300px;
+                                                                                                                    width: -webkit-fill-available;
+                                                                                                                }
+                                                                                                            </style><a href="https://www.embedgooglemap.net"></a>
+                                                                                                            <style>
+                                                                                                                .gmap_canvas {
+                                                                                                                    overflow: hidden;
+                                                                                                                    background: none !important;
+                                                                                                                    height: 300px;
+                                                                                                                    width: -webkit-fill-available;
+                                                                                                                }
+                                                                                                            </style>
+                                                                                                        </div>
+                                                                                                    </div>
                                                                                                 </div>
                                                                                             </div>
                                                                                         </div>
