--- a/index.html
+++ b/index.html
@@ -4825,7 +4825,7 @@
 
 
                                                         <div
-                                                            class="tm-fid inside tm-fid-with-icon tm-fid-view-lefticon tm-fid-no-border tm-highlight-fid">
+                                                            class="tm-fid inside tm-fid-with-icon tm-fid-view-lefticon tm-fid-no-border tm-highlight-fid experience-mobile">
                                                             <div class="tm-fid-icon-wrapper"><i
                                                                     class="fa fa-hospital-o"></i></div>
                                                             <div class="tm-fld-contents">
@@ -4835,7 +4835,7 @@
                                                                         data-before="" data-before-style="sup"
                                                                         data-after="+" data-after-style="sup">
                                                                         10 </span>
-                                                                    <sup>+</sup> </h4>
+                                                                    <sup class="experience-sub">+</sup> </h4>
                                                                 <h3 class="tm-fid-title"><span>Years Of<br />
                                                                         Experience<br></span></h3>
                                                             </div>
@@ -4925,7 +4925,29 @@
 
 
 
-
+            <div class="mapouter">
+                <div class="gmap_canvas">
+                    <iframe style="width: -webkit-fill-available" height="400" id="gmap_canvas"
+                        src="https://maps.google.com/maps?q=AGP%20Neuro%20Clinic&t=&z=13&ie=UTF8&iwloc=&output=embed"
+                        frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+                    <style>
+                        .mapouter {
+                            position: relative;
+                            text-align: right;
+                            height: 400px;
+                            width: -webkit-fill-available;
+                        }
+                    </style><a href="https://www.embedgooglemap.net"></a>
+                    <style>
+                        .gmap_canvas {
+                            overflow: hidden;
+                            background: none !important;
+                            height: 400px;
+                            width: -webkit-fill-available;
+                        }
+                    </style>
+                </div>
+            </div>
 
 
 
