feat: Add new SVG icons for improved user experience

--- a/index.html
+++ b/index.html
@@ -4485,8 +4485,7 @@
                                                                                                 class="tm-vc_icon_element tm-vc_icon_element-outer tm-vc_icon_element-align-left ">
                                                                                                 <div
                                                                                                     class="tm-vc_icon_element-inner  tm-vc_icon_element-color-skincolor tm-vc_icon_element-size-lg tm-vc_icon_element-style-none tm-vc_icon_element-background-color-grey">
-                                                                                                    <span
-                                                                                                        class="tm-vc_icon_element-icon themifyicon ti-heart-broken"></span>
+                                                                                                        <img src="/img/icon/brain-solid-blue.svg" alt="Brain logo">
                                                                                                 </div>
                                                                                             </div>
                                                                                         </div>
@@ -4541,8 +4540,7 @@
                                                                                                 class="tm-vc_icon_element tm-vc_icon_element-outer tm-vc_icon_element-align-left ">
                                                                                                 <div
                                                                                                     class="tm-vc_icon_element-inner  tm-vc_icon_element-color-skincolor tm-vc_icon_element-size-lg tm-vc_icon_element-style-none tm-vc_icon_element-background-color-grey">
-                                                                                                    <span
-                                                                                                        class="tm-vc_icon_element-icon themifyicon ti-pulse"></span>
+                                                                                                    <img src="/img/icon/pills-solid-blue.svg" alt="Pill blue logo">
                                                                                                 </div>
                                                                                             </div>
                                                                                         </div>
@@ -4597,8 +4595,7 @@
                                                                                                 class="tm-vc_icon_element tm-vc_icon_element-outer tm-vc_icon_element-align-left ">
                                                                                                 <div
                                                                                                     class="tm-vc_icon_element-inner  tm-vc_icon_element-color-skincolor tm-vc_icon_element-size-lg tm-vc_icon_element-style-none tm-vc_icon_element-background-color-grey">
-                                                                                                    <span
-                                                                                                        class="tm-vc_icon_element-icon themifyicon ti-heart"></span>
+                                                                                                    <img src="/img/icon/user-doctor-blue.svg" alt="Doctor blue logo">
                                                                                                 </div>
                                                                                             </div>
                                                                                         </div>
