Update color scheme for text elements

--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
             font-weight: 400;
             font-size: 15px;
             line-height: 25px;
-            color: #9dabaf
+            color: #585c5e
         }
 
         h1 {
@@ -435,7 +435,7 @@
             font-size: 14px;
             line-height: 21px;
             letter-spacing: 1.5px;
-            color: #9dabaf
+            color: #585c5e
         }
 
         .tm-element-heading-wrapper .tm-vc_general.tm-vc_cta3 .tm-vc_cta3-content p {
@@ -443,7 +443,7 @@
             font-weight: 400;
             font-size: 15px;
             line-height: 25px;
-            color: #9dabaf
+            color: #585c5e
         }
 
         body .widget .widget-title,
@@ -517,7 +517,7 @@
             font-size: 14px;
             line-height: 20px;
             letter-spacing: 1px;
-            color: #9dabaf
+            color: #585c5e
         }
 
         .tm-titlebar .breadcrumb-wrapper,
@@ -527,7 +527,7 @@
             text-transform: capitalize;
             font-size: 13px;
             line-height: 19px;
-            color: #9dabaf
+            color: #585c5e
         }
 
         .headerlogo a.home-link {
@@ -589,7 +589,7 @@
         .wpb_row .vc_tta.vc_general.vc_tta-color-white:not(.vc_tta-o-no-fill) .vc_tta-panel-body .wpb_text_column,
         .tm-list.tm-list-icon-color- li,
         .tm-list-li-content {
-            color: #9dabaf
+            color: #585c5e
         }
 
         .widget.brivona_category_list_widget li.current-cat a,
