--- a/about.html
+++ b/about.html
@@ -333,7 +333,7 @@
             font-weight: 400;
             font-size: 15px;
             line-height: 25px;
-            color: #9dabaf
+            color: #585c5e
         }
 
         h1 {
@@ -400,7 +400,7 @@
             font-size: 14px;
             line-height: 21px;
             letter-spacing: 1.5px;
-            color: #9dabaf
+            color: #585c5e
         }
 
         .tm-element-heading-wrapper .tm-vc_general.tm-vc_cta3 .tm-vc_cta3-content p {
@@ -408,7 +408,7 @@
             font-weight: 400;
             font-size: 15px;
             line-height: 25px;
-            color: #9dabaf
+            color: #585c5e
         }
 
         body .widget .widget-title,
@@ -482,7 +482,7 @@
             font-size: 14px;
             line-height: 20px;
             letter-spacing: 1px;
-            color: #9dabaf
+            color: #585c5e
         }
 
         .tm-titlebar .breadcrumb-wrapper,
@@ -492,7 +492,7 @@
             text-transform: capitalize;
             font-size: 13px;
             line-height: 19px;
-            color: #9dabaf
+            color: #585c5e
         }
 
         .headerlogo a.home-link {
@@ -554,7 +554,7 @@
         .wpb_row .vc_tta.vc_general.vc_tta-color-white:not(.vc_tta-o-no-fill) .vc_tta-panel-body .wpb_text_column,
         .tm-list.tm-list-icon-color- li,
         .tm-list-li-content {
-            color: #9dabaf
+            color: #585c5e
         }
 
         .widget.brivona_category_list_widget li.current-cat a,
