Update services page with hidden h1 tag for improved SEO optimization

--- a/services.html
+++ b/services.html
@@ -3828,6 +3828,7 @@
 
     <div id="tm-home"></div>
     <div class="main-holder">
+        <h1 style="display: none;">Neurology Consulting & General Medicine | AGP Neuro Clinic</h1>
 
         <div id="page" class="hfeed site">
 
